# ottd-macos9

./: .gitignore  LICENSE  NOTICE  README.md
agent-compositor/: harness_dump  harness_dump.cpp  harness_mine  harness_mine.cpp  landscape_render.cpp  landscape_render.h  render_scene.py
agent-tiles/: REPORT.md  gen_tiles.py  tile_sprites.h
compat/: condition_variable  dirent.h  libc_compat.h  mac_sockets.h  mutex  thread
docs/: graphics-acceleration-clamshell.md
hello-console/: CMakeLists.txt  hello.cpp
hello-ppc/: CMakeLists.txt  hello.cpp
ottd-b1/: CMakeLists.txt  b1_render.cpp  b1_shims.cpp  link.err  maclog.cpp  netlog.c  surface.txt  winmain.cpp
ottd-b1min/: CMakeLists.txt  probe_gfx_main.cpp  stub_fio.cpp  stub_fio_C.cpp  stub_gfx.cpp  winmain_A.cpp  winmain_min.cpp
ottd-b1min/bisectA/: CMakeLists.txt
ottd-b1min/bisectB/: CMakeLists.txt  maclog.cpp  winmain_B.cpp
ottd-b1min/bisectC/: CMakeLists.txt  winmain_C.cpp
ottd-b2/: CMakeLists.txt  b2_scene.cpp  b2_shims.cpp  b2main.c  b2probe.cpp  macclassic_sys.c  macclassic_v.cpp  macdir.c  macnet_test.cpp  macsys.h
ottd-date-demo/: CMakeLists.txt  main.cpp  ottd_calc.cpp
ottd-fileprobe/: CMakeLists.txt  main.cpp
ottd-gamelogic/: CMakeLists.txt  gl_shims.cpp  maclog.cpp  main.cpp  maplogic.cpp  winmain.cpp
ottd-gfx-demo/: CMakeLists.txt  gfx.cpp  grf_shims.cpp  ottd_render.cpp
ottd-landscape/: CMakeLists.txt  groundsprite.cpp  landscape_demo.cpp  landscape_render.cpp  landscape_shims.cpp  tile_sprites.h  winmain.cpp
ottd-m1/: CMakeLists.txt  build.sh  env.sh  m1_cmd_stubs.cpp  m1_company.cpp  m1_company_gui.cpp  m1_deadpools.c  m1_economy.cpp  m1_finance_gui.cpp  m1_graph_gui.cpp  m1_industry.cpp  m1_industry_draw.cpp  m1_industry_gui.cpp  m1_land_stubs.cpp  m1_methods.cpp  m1_order.cpp  m1_pathfind.cpp  m1_pools.cpp  m1_profiling_stub.cpp  m1_rail_draw.cpp  m1_road_stubs.cpp  m1_run.cpp  m1_shims.cpp  m1_smallmap_gui.cpp  m1_station.cpp  m1_station_draw.cpp  m1_station_gui.cpp  m1_strings_stubs.cpp  m1_subsidy_gui.cpp  m1_text_stubs.cpp  m1_toolbar_stubs.cpp  m1_town_directory_gui.cpp  m1_town_gui.cpp  m1_town_stubs.cpp  m1_train.cpp  m1_vehicle.cpp  m1_vehicle_list_gui.cpp  m1_viewport_stubs.cpp  m1_water_draw.cpp  m1_window_stubs.cpp  (+3 more)
ottd-r1/: CMakeLists.txt  build.sh  macclassic_sys.c  macdir.c  r1_scene.cpp  r1_winclock.h  r1main.c
ottd-thread-demo/: CMakeLists.txt  demo.cpp
